// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`withPrometheus should works well 1`] = `
"# HELP cache_requests_total Total number of requests to the cache.
# TYPE cache_requests_total counter
cache_requests_total 11

# HELP cache_hits_total Total number of requests to the cache that were a hit.
# TYPE cache_hits_total counter
cache_hits_total 0

# HELP cache_errors_total Total number of errors to the cache.
# TYPE cache_errors_total counter
cache_errors_total 0

# HELP cache_hit_not_found_cache_total Total number of requests to the cache that hit a not found cache.
# TYPE cache_hit_not_found_cache_total counter
cache_hit_not_found_cache_total 10
"
`;

exports[`withPrometheus should works well 2`] = `
"# HELP cache_requests_total Total number of requests to the cache.
# TYPE cache_requests_total counter
cache_requests_total 22

# HELP cache_hits_total Total number of requests to the cache that were a hit.
# TYPE cache_hits_total counter
cache_hits_total 10

# HELP cache_errors_total Total number of errors to the cache.
# TYPE cache_errors_total counter
cache_errors_total 0

# HELP cache_hit_not_found_cache_total Total number of requests to the cache that hit a not found cache.
# TYPE cache_hit_not_found_cache_total counter
cache_hit_not_found_cache_total 10
"
`;
